# flask-editor-api

./: .editorconfig  .gitignore  alembic.ini  pyproject.toml
bulb/: __init__.py  api.py  app.py  base_execution_pipeline.py  build_stage.py  cfg.py  database.py  exceptions.py  loader.py  models.py  pipeline_factory.py  pipelines.py  profiles.py  proto.py  router.py  sandbox_observer.py  services.py  solution_builder.py  utils.py
bulb/api/: __init__.py  auth.py  execution.py  snippets.py  user.py
bulb/models/: __init__.py  github_oauth.py  language_profile.py  sandbox_ws_messages.py  snippets.py  stats.py  user.py
bulb/services/: __init__.py  dependencies.py  permissions.py
bulb/services/auth/: __init__.py  abstract_oauth.py  dependencies.py  exceptions.py  github_oauth.py  jwt.py
bulb/services/execution/: __init__.py  base_execution_pipeline.py  build_stage.py  pipeline_factory.py  pipelines.py  proto.py  sandbox_observer.py  service.py  solution_builder.py  stream.py
bulb/services/snippets/: __init__.py  dependencies.py  exceptions.py  permissions.py  repo.py
images/gcc10/: Dockerfile
images/python2.7/: Dockerfile
migrations/: env.py  script.py.mako
migrations/versions/: 2e3f3b8566f5_added_snippets_schema.py  be2fa1db0613_added_programming_language_info_to_.py  cbbec12b6de5_set_to_code_text_type.py  e1cb123acff2_added_snippets_schema.py
