[tool.poetry]
name = "bulb"
version = "0.1.0"
description = ""
authors = ["Artem <burenotti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
pydantic = "^1.9.0"
runbox = "^0.5.0"
celery = "^5.2.6"
uvicorn = "^0.17.6"
websockets = "^10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
