[tool.poetry]
name = "bulb"
version = "0.1.0"
description = ""
authors = ["Artem <burenotti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
runbox = "^0.5.0"
celery = "^5.2.6"
uvicorn = "^0.17.6"
websockets = "^10.3"
certifi = "^2021.10.8"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
SQLAlchemy = {extras = ["asyncpg", "asyncio"], version = "^1.4.36"}
sqlmodel = "^0.0.6"
alembic = "^1.7.7"
asyncpg = "^0.25.0"
greenlet = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
